# finance-RAG-BE

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  prometheus.yml  pyproject.toml
.github/workflows/: deploy-cloud-run.yml
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py  middleware.py  rate_limiter.py
app/api/routes/: auth.py  chats.py  documents.py  evaluate.py  health.py  ingest.py  query.py  usage.py
app/auth/: __init__.py  dependencies.py  google_oauth.py  jwt_handler.py
app/core/: config.py  events.py  exceptions.py  logging.py
app/evaluation/: __init__.py  benchmark.py  metrics.py  ragas_eval.py
app/generation/: __init__.py  base.py  fireworks_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  pipeline.py  prompts.py
app/generation/prompts/: v1.yaml
app/guardrails/: __init__.py  input_guard.py  output_guard.py
app/ingestion/: __init__.py  docling_worker.py  document_converter.py  lite_converter.py  pdf_parser.py  pipeline.py
app/ingestion/chunking/: __init__.py  base.py  docling_hybrid.py  recursive.py
app/ingestion/embeddings/: __init__.py  base.py  bge.py  nomic.py  ollama.py
app/models/: __init__.py  domain.py  requests.py  responses.py
app/monitoring/: __init__.py  cost_tracker.py  langfuse_provider.py  prometheus.py  tracing.py
app/rag/: __init__.py  document_resolver.py  nodes.py  state.py
app/rag/strategies/: __init__.py  adaptive.py  agentic.py  basic.py  self_correcting.py
app/retrieval/: __init__.py  dense.py  fusion.py  hybrid.py  reranker.py  sparse.py
app/storage/: __init__.py  cloud_storage.py  firestore.py  redis_client.py
tests/: conftest.py  test_config.py  test_exceptions.py  test_fusion.py  test_guardrails.py  test_jwt.py  test_metrics.py  test_models.py  test_output_guard.py  test_prompts.py
